Fix confirm order button visibility

--- a/src/style.css
+++ b/src/style.css
@@ -48,6 +48,7 @@
 .info p {
   margin: 0 0 10px;
   color:#ff6347;
+  text-size-adjust: 100%;
 }
 
 .info button {
